--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -14,6 +14,7 @@
     "hardhat": "^2.22.13"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5"
   }
 }
